--- a/AplicacionCasaDomotica.csproj
+++ b/AplicacionCasaDomotica.csproj
@@ -71,6 +71,7 @@
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
+    <None Include="ProyectoIA.ino" />
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\layout\activity_main.xml">
